--- a/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
@@ -12,29 +12,26 @@
 		<!-- 
 		style="background:#dfe8f6 url('${pageContext.request.contextPath}/resources/img/background2014Full.jpg') no-repeat center center;"
 		-->
-		<vlayout>
-			<vbox hflex="20" pack="center" align="center">
-				<hbox>
-					<label value="${vm.welcomeInfo}" sclass="scb-headline-big"/>
-				</hbox>
-				<button label="@load(vm.newCourseApplicationTitle)" 
-					href="/pages/public/prihlaska-do-klubu.zul"
-					iconSclass="z-icon-file-text"
-					visible="@load(vm.isCourseApplicationAllowed())"
-					style="margin-right: 10px; margin-top: 20px; font-weight: bold; height: 50px" />
-				
-				<!-- Prihlasky nejsou povoleny info -->
-				<vbox hflex="20" pack="center" align="center" 
-						sclass="vbox-content" 
-						style="margin-right: 10px; margin-top: 20px;" 
-						visible="@load(!vm.courseApplicationAllowed)" >
-						
-					<window closable="false" border="normal" sclass="alert alert-danger" >
-						<caption iconSclass="z-icon-exclamation">
-							<label value="Přihlášky do plaveckého kurzu nejsou aktuálně otevřené."/>
-						</caption>
-					</window>
-				</vbox>
+		<vlayout sclass="dashboar-public">
+			<label value="${vm.welcomeInfo}" sclass="scb-headline-big"/>
+			
+			<button label="@load(vm.newCourseApplicationTitle)" 
+				href="/pages/public/prihlaska-do-klubu.zul"
+				iconSclass="z-icon-file-text"
+				visible="@load(vm.isCourseApplicationAllowed())"
+				style="margin-right: 10px; margin-top: 20px; font-weight: bold; min-height: 50px" />
+			
+			<!-- Prihlasky nejsou povoleny info -->
+			<vbox hflex="20" pack="center" align="center" 
+					sclass="vbox-content" 
+					style="margin-right: 10px; margin-top: 20px;" 
+					visible="@load(!vm.courseApplicationAllowed)" >
+					
+				<window closable="false" border="normal" sclass="alert alert-danger" >
+					<caption iconSclass="z-icon-exclamation">
+						<label value="Přihlášky do plaveckého kurzu nejsou aktuálně otevřené."/>
+					</caption>
+				</window>
 			</vbox>
 		</vlayout>
 	</div>
