--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
@@ -10,166 +10,166 @@
 			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationListVM')">
 		
 		
-		<vlayout hflex="1">
+		<vlayout hflex="1" sclass="listbox-wrapper listbox-mobile-width-1000">
 			<label value="${c:l('txt.ui.menu.applications')}" sclass="scb-headline-big"/>
 			
-				<listbox model="@load(vm.courseApplicationList)"
-					id="courseApplicationList"
-					hflex="1"
-					mold="paging"
-					pageSize="10"
-					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-					class="listbox" >
+			<listbox model="@load(vm.courseApplicationList)"
+				id="courseApplicationList"
+				hflex="1"
+				mold="paging"
+				pageSize="10"
+				emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+				class="listbox" >
+				
+		        <auxhead>
+		            <auxheader class="header" colspan="7" >
+		            	<hlayout sclass="pull-left">
+		            		<label value="@load(vm.unregToCurrYearLabel)" 
+            					style="vertical-align:middle; display:inline-block; margin-right: 5px;" />
+	            			<checkbox id="unregToCurrYearCheck" checked="@bind(vm.unregToCurrYear)" 
+	            				onCheck="@command('loadUnregisteredCurrYearCmd')"
+	            				style="vertical-align:middle; margin-right: 5px;" />
+	            			<button tooltiptext="${c:l('txt.ui.common.sendWarnMail')}" 
+	            				iconSclass="z-icon-paper-plane" 
+	            				visible="@load(vm.unregToCurrYear)"
+	            				onClick="@command('sendnMailToUnregisteredFromPrevSeasonCmd')"
+	            				sclass="toolbar-btn"  />
+		            	</hlayout>
+		            	
+		            	<hlayout sclass="pull-right">
+		            		<!-- Rocnik -->
+            				<include src="/pages/common/component/context-year.zul"/>
+            				<button iconSclass="z-icon-download" 
+            					onClick="@command('exportToExcel',listbox=courseApplicationList)" 
+            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
+            					sclass="toolbar-btn"/>
+           					<button iconSclass="z-icon-refresh" 
+           						onClick="@command('refreshDataCmd')" 
+           						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
+           						sclass="toolbar-btn"/>
+		            	</hlayout>
+		            </auxheader>
+		        </auxhead>
+		        
+		        <!-- Filter -->
+				<auxhead height="37px">
+					<auxheader class="filter">
+						<textbox hflex="1"
+							value="@bind(vm.filter.courseParticName)"
+							onChange="@command('filterDomCmd')"
+							onOK="@command('filterDomCmd')" />
+					</auxheader>
+					<auxheader class="filter">
+						<textbox hflex="1" 
+							value="@bind(vm.filter.birthDate)"
+							onChange="@command('filterDomCmd')"
+							onOK="@command('filterDomCmd')" />
+					</auxheader>
+					<auxheader class="filter">
+						<textbox hflex="1" 
+							value="@bind(vm.filter.courseParticRepresentative)"
+							onChange="@command('filterDomCmd')"
+							onOK="@command('filterDomCmd')" />
+					</auxheader>
+					<auxheader class="filter">
+						<textbox hflex="1" 
+							value="@bind(vm.filter.modifAt)"
+							onChange="@command('filterDomCmd')"
+							onOK="@command('filterDomCmd')" />
+					</auxheader>
+					<auxheader class="filter">
+						<listbox selectedItem="@bind(vm.filter.inCourse)"
+							onSelect="@command('filterDomCmd')"
+							mold="select"
+							hflex="1"
+							model="@load(vm.booleanListItem)"
+							height="25px" >
+							<template name="model">
+								<listitem label="${each ? 'Ano' : (each eq null ? '' : 'Ne')}" value="${each}" />
+							</template>
+						</listbox>
+					</auxheader>
 					
-			        <auxhead>
-			            <auxheader class="header" colspan="7" >
-			            	<hlayout sclass="pull-left">
-			            		<label value="@load(vm.unregToCurrYearLabel)" 
-	            					style="vertical-align:middle; display:inline-block; margin-right: 5px;" />
-		            			<checkbox id="unregToCurrYearCheck" checked="@bind(vm.unregToCurrYear)" 
-		            				onCheck="@command('loadUnregisteredCurrYearCmd')"
-		            				style="vertical-align:middle; margin-right: 5px;" />
-		            			<button tooltiptext="${c:l('txt.ui.common.sendWarnMail')}" 
-		            				iconSclass="z-icon-paper-plane" 
-		            				visible="@load(vm.unregToCurrYear)"
-		            				onClick="@command('sendnMailToUnregisteredFromPrevSeasonCmd')"
-		            				sclass="toolbar-btn"  />
-			            	</hlayout>
-			            	
-			            	<hlayout sclass="pull-right">
-			            		<!-- Rocnik -->
-	            				<include src="/pages/common/component/context-year.zul"/>
-	            				<button iconSclass="z-icon-download" 
-	            					onClick="@command('exportToExcel',listbox=courseApplicationList)" 
-	            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
-	            					sclass="toolbar-btn"/>
-            					<button iconSclass="z-icon-refresh" 
-            						onClick="@command('refreshDataCmd')" 
-            						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
-            						sclass="toolbar-btn"/>
-			            	</hlayout>
-			            </auxheader>
-			        </auxhead>
-			        
-			        <!-- Filter -->
-					<auxhead height="37px">
-						<auxheader class="filter">
-							<textbox hflex="1"
-								value="@bind(vm.filter.courseParticName)"
-								onChange="@command('filterDomCmd')"
-								onOK="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-							<textbox hflex="1" 
-								value="@bind(vm.filter.birthDate)"
-								onChange="@command('filterDomCmd')"
-								onOK="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-							<textbox hflex="1" 
-								value="@bind(vm.filter.courseParticRepresentative)"
-								onChange="@command('filterDomCmd')"
-								onOK="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-							<textbox hflex="1" 
-								value="@bind(vm.filter.modifAt)"
-								onChange="@command('filterDomCmd')"
-								onOK="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-							<listbox selectedItem="@bind(vm.filter.inCourse)"
-								onSelect="@command('filterDomCmd')"
-								mold="select"
-								hflex="1"
-								model="@load(vm.booleanListItem)"
-								height="25px" >
-								<template name="model">
-									<listitem label="${each ? 'Ano' : (each eq null ? '' : 'Ne')}" value="${each}" />
-								</template>
-							</listbox>
-						</auxheader>
-						
-						<auxheader class="filter">
-							<listbox selectedItem="@bind(vm.filter.newParticipant)"
-								onSelect="@command('filterDomCmd')"
-								mold="select"
-								hflex="1"
-								model="@load(vm.booleanListItem)"
-								height="25px" >
-								<template name="model">
-									<listitem label="${each ? 'Ano' : (each eq null ? '' : 'Ne')}" value="${each}" />
-								</template>
-							</listbox>
-						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
-					</auxhead>
-					
-			        <listhead >
-			            <listheader label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" sort="auto(courseParticipant.contact.surname)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" hflex="min" />
-			            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)"  align="left" />
-			            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="left" hflex="min" />
-			            <listheader label="${c:l('txt.ui.common.inCourse')}" align="center" width="90px" />
-			            <listheader label="${c:l('txt.ui.common.new2')}" align="center" width="90px" />
-			            <listheader width="90px" align="center" />
-			        </listhead>
-			         
-			        <template name="model">
-			            <listitem>
-			                <listcell label="${each.courseParticipant.contact.surname} ${each.courseParticipant.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="@load(each.courseParticipant.birthdate) @converter(vm.dateConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="" onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
-			                	<hbox hflex="1" vflex="1" align="center">
-				                	<hbox hflex="1">
-				                		<vbox hflex="1">
-						                	<label value="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" />
-				                		</vbox>
-				                		<vbox width="30px" align="center" >
-				                			<!-- Kontakt popup -->
-						                	<a sclass="big-icon" iconSclass="z-icon-info-circle" popup="contactPopup_${each.uuid}, position=after_end" style="margin-left: 5px;" tooltiptext="${c:l('txt.ui.common.contact')}" />
-						                	
-						                	<popup id="contactPopup_${each.uuid}" width="400px">
-										    	<vbox style="margin: 5px;">
-										    		
-										    		<label value="${c:l('txt.ui.common.contact')}" width="100%" sclass="sp-popup-headline"/>
-										    		<grid width="100%">
-														<rows>
-															<row>
-																<label value="${c:l('txt.ui.common.phone')}"/>
-																<label value="${each.courseParticRepresentative.contact.phone1}"/>
-															</row>
-															<row>
-																<label value="${c:l('txt.ui.common.email')}"/>
-																<label value="${each.courseParticRepresentative.contact.email1}"/>
-															</row>
-														</rows>
-													</grid>
-										    	</vbox>
-										    </popup>
-										    
-				                		</vbox>
-				                	</hbox>
+					<auxheader class="filter">
+						<listbox selectedItem="@bind(vm.filter.newParticipant)"
+							onSelect="@command('filterDomCmd')"
+							mold="select"
+							hflex="1"
+							model="@load(vm.booleanListItem)"
+							height="25px" >
+							<template name="model">
+								<listitem label="${each ? 'Ano' : (each eq null ? '' : 'Ne')}" value="${each}" />
+							</template>
+						</listbox>
+					</auxheader>
+					<auxheader class="filter">
+					</auxheader>
+				</auxhead>
+				
+		        <listhead >
+		            <listheader label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" sort="auto(courseParticipant.contact.surname)" align="left" />
+		            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" hflex="min" />
+		            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)"  align="left" />
+		            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="left" hflex="min" />
+		            <listheader label="${c:l('txt.ui.common.inCourse')}" align="center" width="90px" />
+		            <listheader label="${c:l('txt.ui.common.new2')}" align="center" width="90px" />
+		            <listheader width="90px" align="center" />
+		        </listhead>
+		         
+		        <template name="model">
+		            <listitem>
+		                <listcell label="${each.courseParticipant.contact.surname} ${each.courseParticipant.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+		                <listcell label="@load(each.courseParticipant.birthdate) @converter(vm.dateConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+		                <listcell label="" onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
+		                	<hbox hflex="1" vflex="1" align="center">
+			                	<hbox hflex="1">
+			                		<vbox hflex="1">
+					                	<label value="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" />
+			                		</vbox>
+			                		<vbox width="30px" align="center" >
+			                			<!-- Kontakt popup -->
+					                	<a sclass="big-icon" iconSclass="z-icon-info-circle" popup="contactPopup_${each.uuid}, position=after_end" style="margin-left: 5px;" tooltiptext="${c:l('txt.ui.common.contact')}" />
+					                	
+					                	<popup id="contactPopup_${each.uuid}" width="400px">
+									    	<vbox style="margin: 5px;">
+									    		
+									    		<label value="${c:l('txt.ui.common.contact')}" width="100%" sclass="sp-popup-headline"/>
+									    		<grid width="100%">
+													<rows>
+														<row>
+															<label value="${c:l('txt.ui.common.phone')}"/>
+															<label value="${each.courseParticRepresentative.contact.phone1}"/>
+														</row>
+														<row>
+															<label value="${c:l('txt.ui.common.email')}"/>
+															<label value="${each.courseParticRepresentative.contact.email1}"/>
+														</row>
+													</rows>
+												</grid>
+									    	</vbox>
+									    </popup>
+									    
+			                		</vbox>
 			                	</hbox>
-			                </listcell>
-			                <listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />			                	
-		            		<listcell sclass="big-icon" iconSclass="z-icon-check-circle" style="color: #87B87F;" visible="${each.courseParticipant.inCourse()}" tooltiptext="${each.courseParticipant.getInCourseInfo()}" />
-                			<listcell visible="${!each.courseParticipant.inCourse()}" />
-                			
-                			<listcell sclass="big-icon" iconSclass="z-icon-check-circle" style="color: #87B87F;" visible="${!each.currentParticipant}"  />
-                			<listcell visible="${each.currentParticipant}" />
-                			
-			                <listcell>
-			                	<button iconSclass="z-icon-ellipsis-h" popup="menuCourseApplication_${each.uuid}, position=after_end" />
-			                	<menupopup id="menuCourseApplication_${each.uuid}" >
-									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
-									<menuitem label="Odstranit" disabled="${each.courseParticipant.inCourse()}" onClick="@command('deleteCmd', item=each)"  />
-						       	</menupopup>
-			                </listcell>
-			            </listitem>
-			        </template>
-			    </listbox>
+		                	</hbox>
+		                </listcell>
+		                <listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />			                	
+	            		<listcell sclass="big-icon" iconSclass="z-icon-check-circle" style="color: #87B87F;" visible="${each.courseParticipant.inCourse()}" tooltiptext="${each.courseParticipant.getInCourseInfo()}" />
+               			<listcell visible="${!each.courseParticipant.inCourse()}" />
+               			
+               			<listcell sclass="big-icon" iconSclass="z-icon-check-circle" style="color: #87B87F;" visible="${!each.currentParticipant}"  />
+               			<listcell visible="${each.currentParticipant}" />
+               			
+		                <listcell>
+		                	<button iconSclass="z-icon-ellipsis-h" popup="menuCourseApplication_${each.uuid}, position=after_end" />
+		                	<menupopup id="menuCourseApplication_${each.uuid}" >
+								<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
+								<menuitem label="Odstranit" disabled="${each.courseParticipant.inCourse()}" onClick="@command('deleteCmd', item=each)"  />
+					       	</menupopup>
+		                </listcell>
+		            </listitem>
+		        </template>
+		    </listbox>
 			
 		</vlayout>
 	</div>
