--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -74,11 +74,12 @@
 								</row>
 								<row visible="@load(!empty(vm.courseList))" >
 									<cell   if="${!vm.securedMode}" >
-										<vbox hflex="1">
+										<vlayout hflex="1" sclass="listbox-wrapper">
 											<label value="${c:l('txt.ui.common.SelectCourse')}"/>
 											<!-- Verejna cast -->
 											<listbox model="@load(vm.courseList)" 
 												hflex="1"
+												sclass="listbox"
 												selectedItems="@bind(vm.courseSelected)"
 												multiple="false"
 												checkmark="true" >
@@ -113,7 +114,7 @@
 										            </listitem>
 										        </template>
 										    </listbox>
-								    	</vbox>
+								    	</vlayout>
 									</cell>
 								</row>
 								
