--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -392,7 +392,7 @@
 				    	
 				    	<tabpanel>
 				    		<!-- Dochazka -->
-				    		<vlayout>
+				    		<vlayout sclass="mobile-overflow-x-auto">
 				    			<hlayout style="margin-top: 10px;margin-bottom: 10px;" 
 				    					visible="@init(vm.courseListStatsVisible)">
 				    				<label value="${c:l('txt.ui.common.course')}: " style="margin-right: 5px;"/>
