--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
@@ -14,174 +14,186 @@
        		form="@id('fx') @load(vm) @save(vm, before='submit')" >
 		
 		<vlayout>
-			<page-toolbar width="100%" self="@{define(pageToolbar)}"/>
-            <label value="${vm.pageHeadline}" sclass="scb-headline-big"/>
+			<hlayout sclass="scb-page-toolbar" width="100%" self="@{define(pageToolbar)}">
+				<button onClick="@command('backCmd')" 
+						label="${c:l('txt.ui.common.Back')}" 
+						iconSclass="z-icon-arrow-left" 
+						sclass="btn-light fix-btn-icon"/>
+		            					
+				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}"
+						label="${c:l('txt.ui.common.new')}" 
+        				iconSclass="z-icon-plus"
+        				style="margin-left: 10px;"
+        				visible="@load(vm.isLoggedUserInRole('ADMIN'))" />
+			</hlayout>
+			
+            <label value="@load(vm.pageHeadline)" sclass="scb-headline-big"/>
         </vlayout>
 
 			<!-- Formular -->
-			<vlayout>	    
-				<grid hflex="1" sclass="scb-panel">
-					<columns>
-		                <column align="left" hflex="1" />
-		            </columns>
-		            
-					<rows >
-						<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-							<cell sclass="form-grid-cell" >
-								<vbox hflex="1">
-									<label value="${c:l('txt.ui.common.name')}"/>
-									<textbox id="courseName"
-										value="@bind(fx.course.name) @validator(vm.notNullValidator)"
-										maxlength="@load(vm.getNameMaxlength())"
-										placeholder="*"
-										focus="true"
-										style="height: 30px;"
-										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-										tabindex="1"
-										hflex="1" />
-									<hbox hflex="1" align="end" pack="end" style="height: 30px">
-										<validMsg vmsg="${vmsgs}" elem="${courseName}" />
-									</hbox>
-								</vbox>
-							</cell>
-						</row>
-						<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-							<cell sclass="form-grid-cell" >
-								<vlayout hflex="1">
-									<label value="${c:l('txt.ui.common.description2')}"/>
-									<textbox id="courseDescription"
-										value="@bind(fx.course.description)"
-										maxlength="1000"
-										style="height: 30px;"
-										multiline="true"
-										tabindex="2"
-										height="115px"
-										hflex="1" />
-									<vbox hflex="2" style="height: 30px">
-										
-									</vbox>
-								</vlayout>
-							</cell>
-						</row>
-						<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-							<cell sclass="form-grid-cell" >
-								<vlayout hflex="1">
-									<label value="${c:l('txt.ui.common.courseLocation')}"/>
-									<listbox id="courseLocation" 
-										selectedItem="@bind(vm.course.courseLocation) @validator(vm.notNullObjectValidator)" 
-										model="@load(vm.courseLocationList)"
-										mold="select"
-										height="30px"
-										hflex="1"
-										tabindex="3" >
-										<template name="model">
-							           		<listitem label="${each.name}, ${each.description}" value="${each}" />
-										</template>
-									</listbox>
-									<vlayout hflex="2" style="margin-left: 10px;">
-										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[courseLocation])" >
-											<label value="@bind(vmsgs[courseLocation])" />
-										</span>
-									</vlayout>
-								</vlayout>
-							</cell>
-						</row>
-						<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-							<cell sclass="form-grid-cell" >
-								<hlayout hflex="1">
-									<vlayout hflex="min" style="margin-right: 20px;">
-										<label value="${c:l('txt.ui.common.year')}"/>
-										<listbox id="courseYear" 
-											selectedItem="@bind(vm.courseYearSelected)" 
-											model="@load(vm.courseYearList)"
-											mold="select"
-											disabled="@load(vm.updateMode)"
-											height="30px"
-											tabindex="4"  >
-										</listbox>
-										
-										<vlayout hflex="2" style="margin-left: 10px;">
-											<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[courseYear])" >
-												<label value="@bind(vmsgs[courseYear])" />
-											</span>
-										</vlayout>
-									</vlayout>
-								</hlayout>
-							</cell>
-						</row>
-						<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-							<cell sclass="form-grid-cell" >
-								<hbox hflex="1">
-									<vbox hflex="min" style="margin-right: 20px;">
-										<label value="${c:l('txt.ui.common.priceSemester1')}"/>
-										<hbox align="center" hflex="min">
-											<intbox id="coursePriceSemester1"
-												value="@bind(fx.course.priceSemester1) @validator(vm.notNullObjectValidator)"
-												placeholder="*"
-												style="height: 30px;"
-												width="75px"
-												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="5"/>
-											<label value="${c:l('txt.ui.common.CZK')}" style="margin-left: 2px"/>
-										</hbox>
-										<hbox width="75px" align="end" pack="end" style="height: 30px">
-											<validMsg vmsg="${vmsgs}" elem="${coursePriceSemester1}" />
-										</hbox>
-									</vbox>
-									<vbox hflex="min" >
-										<label value="${c:l('txt.ui.common.priceSemester2')}"/>
-										<hbox align="center" hflex="min">
-											<intbox id="coursePriceSemester2"
-												value="@bind(fx.course.priceSemester2) @validator(vm.notNullObjectValidator)"
-												placeholder="*"
-												style="height: 30px;"
-												width="75px"
-												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="6" />
-											<label value="${c:l('txt.ui.common.CZK')}" style="margin-left: 2px" />
-										</hbox>
-										<hbox width="75px" align="end" pack="end" style="height: 30px">
-											<validMsg vmsg="${vmsgs}" elem="${coursePriceSemester2}" />
-										</hbox>
-									</vbox>
-								</hbox>
-							</cell>
-						</row>
-						<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-							<cell sclass="form-grid-cell" >
-								<hbox hflex="1">
-									<vbox hflex="min" style="margin-right: 20px;">
-										<label value="${c:l('txt.ui.common.MaxParticCount')}"/>
-										<hbox align="center" hflex="min">
-											<intbox id="maxParticCount"
-												value="@bind(fx.course.maxParticipantCount)"
-												style="height: 30px;"
-												width="75px"
-												tabindex="7"/>
-										</hbox>
-										<hbox width="75px" align="end" pack="end" style="height: 30px">
-<!-- 											<validMsg vmsg="${vmsgs}" elem="${maxParticCount}" /> -->
-										</hbox>
-									</vbox>
-								</hbox>
-							</cell>
-						</row>	
-					</rows>
-				</grid>
-				
-				<hlayout style="margin-top: 20px;">
-					<button label="Uložit"
-						onClick="@command('submit')" 
-						iconSclass="z-icon-check" 
-						sclass="btn-success"/>
-				</hlayout>
-				
-				<tabbox id="tb" hflex="1" visible="@load(vm.updateMode)" style="margin-top: 20px; margin-bottom: 20px;">
+			<vlayout>				
+				<tabbox id="tb" hflex="1" style="margin-bottom: 20px;">
 				    <tabs id="tabs">
-				        <tab id="courseParticipants" label="${c:l('txt.ui.common.participants')}" iconSclass="z-icon-child" />
-				        <tab id="lessons" label="${c:l('txt.ui.common.lessons')}" iconSclass="z-icon-calendar" />
+				        <tab id="courseInfo" label="${c:l('txt.ui.common.General')}" />
+				        <tab id="courseParticipants" disabled="@load(!vm.updateMode)" label="${c:l('txt.ui.common.participants')}" iconSclass="z-icon-child" />
+				        <tab id="lessons" label="${c:l('txt.ui.common.lessons')}" disabled="@load(!vm.updateMode)" iconSclass="z-icon-calendar" />
 				    </tabs>
 				    <tabpanels>
+				        <tabpanel >
+				        	<!-- Zakladni informace -->
+				        	<grid hflex="1" sclass="scb-panel" >
+								<columns>
+					                <column align="left" hflex="1" />
+					            </columns>
+								<rows >
+									<row sclass="form-grid-row" style="border: none; padding: 10px 30px 0px 30px;" >
+										<cell sclass="form-grid-cell" >
+											<vbox hflex="1">
+												<label value="${c:l('txt.ui.common.name')}"/>
+												<textbox id="courseName"
+													value="@bind(fx.course.name) @validator(vm.notNullValidator)"
+													maxlength="@load(vm.getNameMaxlength())"
+													placeholder="*"
+													focus="true"
+													style="height: 30px;"
+													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+													tabindex="1"
+													hflex="1" />
+												<hbox hflex="1" align="end" pack="end" style="height: 30px">
+													<validMsg vmsg="${vmsgs}" elem="${courseName}" />
+												</hbox>
+											</vbox>
+										</cell>
+									</row>
+									<row sclass="form-grid-row" style="border: none; padding: 0px 30px 0px 30px;" >
+										<cell sclass="form-grid-cell" >
+											<vlayout hflex="1">
+												<label value="${c:l('txt.ui.common.description2')}"/>
+												<textbox id="courseDescription"
+													value="@bind(fx.course.description)"
+													maxlength="1000"
+													style="height: 30px;"
+													multiline="true"
+													tabindex="2"
+													height="115px"
+													hflex="1" />
+												<vbox hflex="2" style="height: 30px">
+													
+												</vbox>
+											</vlayout>
+										</cell>
+									</row>
+									<row sclass="form-grid-row" style="border: none; padding: 0px 30px 0px 30px;" >
+										<cell sclass="form-grid-cell" >
+											<vlayout hflex="1">
+												<label value="${c:l('txt.ui.common.courseLocation')}"/>
+												<listbox id="courseLocation" 
+													selectedItem="@bind(vm.course.courseLocation) @validator(vm.notNullObjectValidator)" 
+													model="@load(vm.courseLocationList)"
+													mold="select"
+													height="30px"
+													hflex="1"
+													tabindex="3" >
+													<template name="model">
+										           		<listitem label="${each.name}, ${each.description}" value="${each}" />
+													</template>
+												</listbox>
+												<vlayout hflex="2" style="margin-left: 10px;">
+													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[courseLocation])" >
+														<label value="@bind(vmsgs[courseLocation])" />
+													</span>
+												</vlayout>
+											</vlayout>
+										</cell>
+									</row>
+									<row sclass="form-grid-row" style="border: none; padding: 20px 30px 0px 30px;" >
+										<cell sclass="form-grid-cell" >
+											<hlayout hflex="1">
+												<vlayout hflex="min" style="margin-right: 20px;">
+													<label value="${c:l('txt.ui.common.year')}"/>
+													<listbox id="courseYear" 
+														selectedItem="@bind(vm.courseYearSelected)" 
+														model="@load(vm.courseYearList)"
+														mold="select"
+														disabled="@load(vm.updateMode)"
+														height="30px"
+														tabindex="4"  >
+													</listbox>
+													
+													<vlayout hflex="2" style="margin-left: 10px;">
+														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[courseYear])" >
+															<label value="@bind(vmsgs[courseYear])" />
+														</span>
+													</vlayout>
+												</vlayout>
+											</hlayout>
+										</cell>
+									</row>
+									<row sclass="form-grid-row" style="border: none; padding: 20px 30px 0px 30px;" >
+										<cell sclass="form-grid-cell" >
+											<hbox hflex="1">
+												<vbox hflex="min" style="margin-right: 20px;">
+													<label value="${c:l('txt.ui.common.priceSemester1')}"/>
+													<hbox align="center" hflex="min">
+														<intbox id="coursePriceSemester1"
+															value="@bind(fx.course.priceSemester1) @validator(vm.notNullObjectValidator)"
+															placeholder="*"
+															style="height: 30px;"
+															width="75px"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="5"/>
+														<label value="${c:l('txt.ui.common.CZK')}" style="margin-left: 2px"/>
+													</hbox>
+													<hbox width="75px" align="end" pack="end" style="height: 30px">
+														<validMsg vmsg="${vmsgs}" elem="${coursePriceSemester1}" />
+													</hbox>
+												</vbox>
+												<vbox hflex="min" >
+													<label value="${c:l('txt.ui.common.priceSemester2')}"/>
+													<hbox align="center" hflex="min">
+														<intbox id="coursePriceSemester2"
+															value="@bind(fx.course.priceSemester2) @validator(vm.notNullObjectValidator)"
+															placeholder="*"
+															style="height: 30px;"
+															width="75px"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="6" />
+														<label value="${c:l('txt.ui.common.CZK')}" style="margin-left: 2px" />
+													</hbox>
+													<hbox width="75px" align="end" pack="end" style="height: 30px">
+														<validMsg vmsg="${vmsgs}" elem="${coursePriceSemester2}" />
+													</hbox>
+												</vbox>
+											</hbox>
+										</cell>
+									</row>
+									<row sclass="form-grid-row" style="border: none; padding: 0px 30px 0px 30px;" >
+										<cell sclass="form-grid-cell" >
+											<hbox hflex="1">
+												<vbox hflex="1" style="margin-right: 20px;">
+													<label value="${c:l('txt.ui.common.MaxParticCount')}"/>
+													<hbox align="center" hflex="min">
+														<intbox id="maxParticCount"
+															value="@bind(fx.course.maxParticipantCount)"
+															style="height: 30px;"
+															width="75px"
+															tabindex="7"/>
+													</hbox>
+													<hbox width="75px" align="end" pack="end" style="height: 30px">
+			<!-- 											<validMsg vmsg="${vmsgs}" elem="${maxParticCount}" /> -->
+													</hbox>
+												</vbox>
+											</hbox>
+										</cell>
+									</row>	
+								</rows>
+							</grid>
+							<button label="Uložit"
+								onClick="@command('submit')" 
+								iconSclass="z-icon-check" 
+								style="margin-top: 20px;"
+								sclass="btn-success"/>
+				        </tabpanel>
 				        <tabpanel>
 				        	<!-- Ucastnici kurzu -->
 							<listbox model="@load(vm.course.participantList)"
