--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/configuration.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/configuration.zul
@@ -10,7 +10,7 @@
 		<vlayout>
 			<label value="${c:l('txt.ui.menu.configuration')}" sclass="scb-headline-big"/>
 		
-				<tabbox id="tb" hflex="1" style="margin-top: 20px;" sclass="mobile-width-1200">
+				<tabbox id="tb" hflex="1" style="margin-top: 20px;" sclass="mobile-width-800">
 				    <tabs id="tabs">
 				        <tab id="courseParticipants" label="${c:l('txt.ui.common.configBasic')}" />
 				        <tab id="courseLocations" label="${c:l('txt.ui.common.courseLocations')}" />
@@ -30,8 +30,8 @@
 								class="listbox" >
 						        
 						        <listhead>
-						            <listheader label="${c:l('txt.ui.common.name')}" align="left" />
-						            <listheader label="${c:l('txt.ui.common.value')}" align="left" />
+						            <listheader label="${c:l('txt.ui.common.name')}" align="left" hflex="1" />
+						            <listheader label="${c:l('txt.ui.common.value')}" align="left" hflex="1"/>
 						            <listheader width="90px" align="center" >
 						            	<button iconSclass="z-icon-refresh" 
 						            		onClick="@command('refreshDataCmd')" 
