--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
@@ -10,7 +10,7 @@
 			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationListVM')">
 		
 		
-		<vlayout hflex="1" sclass="listbox-wrapper listbox-mobile-width-1000">
+		<vlayout hflex="1" sclass="listbox-wrapper listbox-mobile-width-1000 listbox-mobile-2-width-1000">
 			<label value="${c:l('txt.ui.menu.applications')}" sclass="scb-headline-big"/>
 			
 			<listbox model="@load(vm.courseApplicationList)"
