--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -32,11 +32,7 @@
 				    	<tabpanel>
 				    	
 				    		<!-- Ucastnik -->
-							<grid hflex="1" sclass="scb-form-grid-2">
-								<columns>
-					                <column align="center" hflex="1" />
-					            </columns>
-					            
+							<grid sclass="scb-form-grid-2">
 								<rows>
 									<row>
 										<cell>
@@ -169,7 +165,7 @@
 				    	
 				    	<tabpanel>
 				    		<!-- Zakonny zastupce -->
-							<grid hflex="1" sclass="scb-form-grid-2">
+							<grid sclass="scb-form-grid-2">
 								<columns>
 					                <column align="center" hflex="1" />
 					            </columns>
